<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="App Title Bar"
        android:summary="@string/title_bar_preferences_summery"
        android:key="@string/app_title_preferences_key">
    </EditTextPreference>

    <ListPreference
        android:key="@string/preferences_app_text_size_key"
        android:entries="@array/text_size_preferences"
        android:entryValues="@array/text_size_preferences_values"
        android:title="@string/preferences_app_text_size_title"
        android:summary="@string/preferences_app_text_size_summery">
    </ListPreference>

    <CheckBoxPreference
        android:title="Music"
        android:defaultValue="true"
        android:key="@string/music_preferences_key"
        android:summary="@string/music_preferences_summery">
    </CheckBoxPreference>

</PreferenceScreen>